# adk-samples

./: .gitignore  README.md
.github/: CODEOWNERS
agents/: README.md
agents/RAG/: .env.example  README.md  pyproject.toml
agents/RAG/deployment/: deploy.py  grant_permissions.sh
agents/RAG/eval/: test_eval.py
agents/RAG/rag/: agent.py
agents/RAG/rag/shared_libraries/: prepare_corpus_and_data.py
agents/academic-research/: .env.example  README.md  pyproject.toml
agents/academic-research/academic_research/: agent.py  prompt.py
agents/academic-research/eval/: test_eval.py
agents/academic-research/tests/: test_agents.py
agents/brand-search-optimization/: README.md  pyproject.toml
agents/brand-search-optimization/brand_search_optimization/sub_agents/search_results/: agent.py  prompt.py
agents/brand-search-optimization/deployment/: deploy.py  run.sh
agents/customer-service/: README.md  pyproject.toml
agents/customer-service/customer_service/: agent.py  prompts.py
agents/customer-service/customer_service/shared_libraries/: callbacks.py
agents/customer-service/customer_service/tools/: tools.py
agents/customer-service/tests/unit/: test_tools.py
agents/data-science/: .env-example  README.md  pyproject.toml
agents/data-science/data_science/: __init__.py  agent.py  prompts.py
agents/data-science/deployment/: deploy.py  test_deployment.py
agents/data-science/tests/: test_agents.py
agents/financial-advisor/: README.md  pyproject.toml
agents/financial-advisor/eval/data/: seminal.test.json
agents/financial-advisor/financial_advisor/: __init__.py  agent.py  prompt.py
agents/financial-advisor/financial_advisor/sub_agents/data_analyst/: agent.py  prompt.py
agents/financial-advisor/financial_advisor/sub_agents/execution_analyst/: agent.py
agents/financial-advisor/financial_advisor/sub_agents/risk_analyst/: agent.py
agents/financial-advisor/financial_advisor/sub_agents/trading_analyst/: agent.py
agents/financial-advisor/tests/: test_agents.py
agents/fomc-research/: README.md  pyproject.toml
agents/fomc-research/deployment/: test_deployment.py
agents/fomc-research/fomc_research/: __init__.py  agent.py
agents/llm-auditor/: README.md  pyproject.toml
agents/llm-auditor/deployment/: deploy.py
agents/marketing-agency/: README.md  pyproject.toml
agents/marketing-agency/deployment/: deploy.py
agents/marketing-agency/eval/: test_eval.py
agents/marketing-agency/marketing_agency/: __init__.py  agent.py
agents/marketing-agency/tests/: test_agents.py
agents/personalized-shopping/: .env.example  README.md  pyproject.toml
agents/personalized-shopping/personalized_shopping/: __init__.py
agents/personalized-shopping/personalized_shopping/shared_libraries/: init_env.py
agents/personalized-shopping/personalized_shopping/shared_libraries/web_agent_site/engine/: goal.py
agents/personalized-shopping/personalized_shopping/tools/: click.py  search.py
agents/travel-concierge/: .env.example  README.md  pyproject.toml
agents/travel-concierge/deployment/: deploy.py
agents/travel-concierge/eval/: test_eval.py
agents/travel-concierge/travel_concierge/shared_libraries/: types.py
agents/travel-concierge/travel_concierge/sub_agents/booking/: agent.py  prompt.py
agents/travel-concierge/travel_concierge/sub_agents/in_trip/: prompt.py
agents/travel-concierge/travel_concierge/sub_agents/inspiration/: agent.py
agents/travel-concierge/travel_concierge/sub_agents/planning/: agent.py  prompt.py
agents/travel-concierge/travel_concierge/tools/: places.py  search.py
java/: README.md
java/agents/software-bug-assistant/: README.md
java/agents/time-series-forecasting/: Dockerfile  README.md  generate_diagram.py  pom.xml  tools.yaml
python/: README.md
python/agents/: README.md  killport.py  killport.sh
python/agents/RAG/: README.md  pyproject.toml
python/agents/camel/: README.md
python/agents/data-science/: .env-example  .env.example  README.md  README_ZWRUN.md  pyproject.toml
python/agents/data-science/data_science/: agent.py  prompts.py  tools.py
python/agents/data-science/data_science/sub_agents/: __init__.py
python/agents/data-science/data_science/sub_agents/analytics/: prompts.py
python/agents/data-science/data_science/sub_agents/bigquery/: prompts.py  tools.py
python/agents/data-science/data_science/sub_agents/bigquery/chase_sql/: chase_db_tools.py  dc_prompt_template.py  llm_utils.py  qp_prompt_template.py
python/agents/data-science/data_science/sub_agents/bigquery/chase_sql/sql_postprocessor/: README.md  sql_translator.py
python/agents/data-science/data_science/sub_agents/bqml/: agent.py  prompts.py  tools.py
python/agents/data-science/deployment/: deploy.py  test_deployment.py
python/agents/data-science/eval/: test_eval.py
python/agents/gemini-fullstack/: Makefile  README.md  pyproject.toml
python/agents/gemini-fullstack/.template/: templateconfig.yaml
python/agents/gemini-fullstack/app/: agent.py  config.py
python/agents/gemini-fullstack/frontend/: index.html  package-lock.json  package.json  vite.config.ts
python/agents/gemini-fullstack/frontend/src/: App.tsx
python/agents/gemini-fullstack/frontend/src/components/: ChatMessagesView.tsx  WelcomeScreen.tsx
python/agents/image-scoring/: README.md  pyproject.toml
python/agents/image-scoring/deployment/: deploy.py  test_deployment.py
python/agents/image-scoring/image_scoring/: agent.py
python/agents/image-scoring/image_scoring/sub_agents/image/: imagen_agent.py
python/agents/image-scoring/image_scoring/sub_agents/image/tools/: image_generation_tool.py
python/agents/image-scoring/image_scoring/sub_agents/scoring/: prompt.py
python/agents/software-bug-assistant/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
python/agents/software-bug-assistant/deployment/mcp-toolbox/: tools.yaml
python/agents/software-bug-assistant/software_bug_assistant/: agent.py  prompt.py
python/agents/software-bug-assistant/software_bug_assistant/tools/: tools.py
python/aiwithbrandon_mcp/: requirements.txt
python/mcp/: readme.md
(+106 files in other folders)
